# sample-cpp-project

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md
benches/: CMakeLists.txt  library_benchmarks.cpp
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst  library.rst
include/sample_cpp_project/: library.hpp
scripts/cmake/: FindSphinx.cmake  SetProjectCompileOptions.cmake
scripts/travis/: travis_install_iwyu_clang_7.sh  travis_install_vcpkg.sh  travis_testing_script.sh
src/: library.cpp
tests/: CMakeLists.txt  faulty_tests.cpp  library_tests.cpp
